[package]
name = "camprj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Rusts logging api
log = "0.4.0"
#A simple logger implementation 
env_logger = "0.9.0"
#Rusts serialsation and deseralisation api
serde =  { version = "1.0", features = ["derive"] }
#This is the yaml implation for serde 
serde_yaml = "0.9.14"

