[package]
name = "tcp_ping"
version = "0.1.0"
edition = "2021"


[lib]
name="tcpping"
path="src/lib.rs"

[[bin]]
name="tcp_ping"
path="src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Commandline arg parsing tool
clap = { version = "4.0.22", features = ["derive"] }
#helper for handling verbose flags
clap-verbosity-flag = "2.0.0"
#Rusts logging api
log = "0.4.0"
#A simple logger implementation 
env_logger = "0.9.0"
# This is a tool used in testing to get a list of local addresses
local-ip-address = "0.4.9"